[package]
name = "sliding_dft"
version = "1.0.0"
edition = "2021"
authors = [ "Nathan ROYER <nathan.royer.pro@gmail.com>" ]
description = "An implementation of the Sliding DFT"
license = "MIT"
categories = [ "algorithms" ]
repository = "https://github.com/NathanRoyer/sliding_dft"
readme = "README.md"

[dependencies]
num-complex = { version = "0.4.2", default-features = false, features = [ "libm" ] }
num-traits = { version = "0.2.15", default-features = false, features = [ "libm" ] }
